# NodeLens

./: .dockerignore  .env.example  AGENTS.md  Makefile  README.md  docker-compose.loadtest.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build.yml
backend/: pyproject.toml
backend/nodelens/: __init__.py  config.py  constants.py
backend/nodelens/api/: __main__.py  app.py  deps.py  middleware.py
backend/nodelens/api/routes/: __init__.py  alerts.py  dashboards.py  devices.py  health.py  plugins.py  telemetry.py
backend/nodelens/db/: __init__.py  session.py
backend/nodelens/db/models/: __init__.py  alert.py  dashboard.py  device.py  plugin.py  sensor.py  telemetry.py
backend/nodelens/redis/: client.py  streams.py
backend/nodelens/schemas/: alerts.py  dashboards.py  devices.py  events.py  plugins.py  telemetry.py
backend/nodelens/sdk/: __init__.py  base_plugin.py  context.py  device_plugin.py  events.py  exceptions.py  integration_plugin.py
backend/nodelens/workers/alerts/: __main__.py
backend/nodelens/workers/ingestor/: __main__.py  consumer.py  fake_publisher.py  registration.py  writer.py
backend/nodelens/workers/plugin_runner/: __main__.py  db.py  loader.py  run_single.py
backend/tests/: conftest.py  test_api_alerts.py  test_api_dashboards.py  test_api_devices.py  test_api_health.py  test_api_plugins.py  test_api_telemetry.py  test_ingestor_parsing.py  test_ingestor_writer.py  test_plugin_discovery.py  test_plugin_loader.py  test_registration.py
deploy/: alerts.Dockerfile  api.Dockerfile  ingestor.Dockerfile  plugins.Dockerfile
deploy/postgres/: init.sql
deploy/redis/: redis.conf
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.ts  dashboards.ts  devices.ts  plugins.ts  telemetry.ts
frontend/src/components/: AppLayout.tsx
frontend/src/components/dashboard/: AddWidgetModal.tsx  DashboardSettingsModal.tsx  EditWidgetModal.tsx  WidgetGrid.tsx
frontend/src/components/widgets/: ChartWidget.tsx  GaugeWidget.tsx  StatCardWidget.tsx  StatusWidget.tsx  WidgetRenderer.tsx
frontend/src/context/: TimeRange.tsx
frontend/src/hooks/: dashboards.ts  devices.ts  plugins.ts  telemetry.ts
frontend/src/pages/: DashboardPage.tsx  DeviceDetailPage.tsx  DevicesPage.tsx  PluginsPage.tsx
frontend/src/types/: index.ts
plugins/devices/demo_sender/: manifest.yaml  plugin.py  requirements.txt
scripts/: init_db.py  loadtest.py  seed_demo.py  test_report.py
