[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodelens"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.48,<3",
    "asyncpg>=0.31.0,<1",
    "redis>=7.3.0,<8",
    "pydantic>=2.12.5,<3",
    "pydantic-settings>=2.13.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["nodelens"]

[tool.ruff]
target-version = "py313"
line-length = 120
