[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodelens"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.48,<3",
    "asyncpg>=0.31.0,<1",
    "psycopg[binary,pool]>=3.3.3,<4",
    "redis>=7.3.0,<8",
    "pydantic>=2.12.5,<3",
    "pydantic-settings>=2.13.1,<3",
    "ruamel.yaml~=0.19.1",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.34.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["nodelens"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]