[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodelens"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.48,<3",
    "asyncpg>=0.31.0,<1",
    "psycopg[binary,pool]>=3.3.3,<4",
    "redis>=7.3.0,<8",
    "pydantic>=2.12.5,<3",
    "pydantic-settings>=2.13.1,<3",
    "ruamel.yaml~=0.19.1",
    "fastapi>=0.115.0,<1",
    "granian[pname,uvloop]>=2.7.3,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["nodelens"]
omit = [
    "nodelens/__main__.py",
    "nodelens/*/__main__.py",
    "nodelens/*/*/__main__.py",
    "nodelens/api/app.py",
    "nodelens/api/middleware.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = false
precision = 1

[tool.hatch.build.targets.wheel]
packages = ["nodelens"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
